server/public/assets/css/style.css
/*
1. Global styles
2. Entry page
3. Channel page
3.0 Page
3.1 Video
3.2 Playlist
3.3 Search
*/

.material-icons {
    display: none;
    width: 24px;
}

html {
    background: #2d2d2d;
}

body {
    background: white;
}

a {
    outline: 0 !important;
}

.error-code-container {
    background: lightgrey;
    border: 1px solid darkgrey;
    margin-bottom: 20px;
}

.admin_panel{
    margin-top:100px;
}

.current_number{
    color: black;
}

#descriptions_cont, #thumbnails_cont{
    display: flex;
    flex-direction: column;
}

.card-duration{
    border-top-right-radius: 4px;
    position: absolute;
    bottom: 0px;
    left: 0px;
    background: rgba(0,0,0,.7);
    color: white;
    padding: 0 5px;
}

.badge.admin-panel{
    margin: 0px;
    margin-top: 13px;
}

.width25{
    width: 25% !important;
}

.width100{
    width: 100% !important;
}

.snow{-webkit-filter:brightness(100%);-moz-filter:brightness(100%);-o-filter:brightness(100%);filter:brightness(100%);width:5px; height:5px; background-color:white;z-index:1000000;pointer-events:none;position:absolute;border:1px solid white;border-radius:100px;}
.drag-target{pointer-events: none;}
.settings_embed{
    width:40px !important;
    padding:0 10px !important;
    border:none !important;
}

.header-buttons{
    display: block;
}

#player_overlay_controls{
    font-size:7rem;
    width: 100%;
    height: 100%;
}

#volume-button-overlay, #playpause-overlay{
    display: inline-block;
    margin: auto;
    cursor: pointer;
}

#pageButtons{
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-shrink: initial;
    justify-content: space-between;
    height: 32px;
}

.token-container {
    padding-top: 64px;
    word-wrap: break-word;
    overflow: hidden;
}

.token-form {
    position: relative;
}

.full-form-token {
    background: rgba(0,0,0,.5);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.center-loader-token {
    margin: auto;
}

.soundcloud_info_container {
    position: absolute;
    bottom: 20px;
    right: 0px;
    padding-left: 20px;
    display: flex;
    align-items: center;
    background: rgba(0,0,0,.7);
}

.soundcloud_info_container a {
    margin: 0 10px;
}

#player_loader_container {
    height: 100%;
width: 100%;
background: rgba(0,0,0,.5);
}
#player_loader {
    position: absolute;
left: 0;
right: 0;
margin: auto;
}



#send-loader {
    position: absolute;
    top: 0px;
    left: 0px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,.3);
}

#pageButtons, #pageButtons a{
    color:white !important;
    width: 100%;
    justify-content: center;
}

#pageButtons span {
    width: 100%;
    justify-content: center;
}

#pageNumber {
    width: auto !important;
    margin: 0 5px;
}

.first_page, .first_page_hide, .last_page, .last_page_hide {
    width: 50% !important;
}

.hide-playlist-button {
    position: absolute;
    top: 128px;
    background: inherit;
    display:flex;
    align-items:center;
    justify-content:center;
    z-index: 99;
    font-size: 1rem;
    padding: 10px;
    color: white;
}

#pageNumber{
    cursor: default;
    color: white;
    padding:0;
    line-height: 36px;
}

#channel-share-modal {
overflow:hidden;
background: transparent !important;
    text-align: center !important;
    margin: auto;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    box-shadow: none;
}

.chan.tap-target-origin {
    display: none;
}

.tap-target-join {
    color: white;
}

#channel-share-modal p {
    color: white;
    font-size: 2rem;
}

#channel-share-modal.open {
    display: flex !important;
}

#playing_on{
    display: none;
    text-align: left;
    position: absolute;
    bottom: 0px;
    padding-left: 10px;
    align-items: center;
    color: rgba(255,255,255, 0.8);
}

#playing_on #chromecast_icon i{
    font-size:70px;
}

#playing_on #chromecast_text{
    font-size: 20px;
    padding-left: 55px;
}

.prev_page, .next_page, .last_page, .first_page{
    cursor: pointer;
}


.prev_page_hide, .next_page_hide, .last_page_hide, .first_page_hide{
    visibility: visible !important;
    color:gray;
    cursor:default;
}

#chat-container, #suggestions{
    height:calc(100vh - 48px - 64px);
}

.channel-info-all-chat {
    color: lightgrey;
    font-size: 0.75rem;
}

.chat-icon {
    width: 16px;
    margin-right: 2px;
    vertical-align: middle;
}

#chatForm {
    padding-left: 14px;
}

.close-settings{
    color:#2d2d2d
}

.chan-link, .chan-link-element{
    width: 100%;
    padding: 0;
    color: orange !important;
    margin: 0;
}

li.disabled span {
    color: orange !important;
}

.prev_page_hide, .prev_page, .first_page, .first_page_hide{
    padding:0 1px;
}

.next_page_hide, .next_page, .last_page, .last_page_hide{
    padding:0 0px;
    display: flex;
}

.first_page, .first_page_hide {
    padding: 0 0 0 10px;
}

.last_page, .last_page_hide {
    padding: 0 10px 0 0;
}

.settings_embed:focus{
    border:none !important;
    box-shadow: none !important;
}

.padding_right_26 {
    padding-right: 26px !important;
}

.padding_left_6{
    padding-left: 6px !important;
}

.embed-label{
    font-size:1rem !important;
}

#embed-button{
    display:none;
}

.not-imported, .not-exported{
    border-top: 1px solid lightgrey;
    margin-top: 15px;
    color:black;
}

.not-exported-element{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.not-imported-element{
    height:60px;
}

.extra-add-text{
    width: 165px;
    display: inline-block;
    height: 30px;
    line-height: 30px;
}

.not-exported-container .not-imported-element .extra-add-text{
    width: 215px;
}
/* ... */

